--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <microprofile-config-implementation.version>1.2.1</microprofile-config-implementation.version>
     <slf4j.version>1.7.25</slf4j.version>
-    <weld.version>3.0.3.Final</weld.version>
+    <weld.version>3.0.5-SNAPSHOT</weld.version>
     <weld-junit5.version>1.2.1.Final</weld-junit5.version>
   </properties>
 
